--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,17 @@
     <title>Draugr Swap</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover Draugr Swap, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for DRAUGR."
+      content="Cheaper and faster than Uniswap? Discover Draugr Swap, the leading DEX on Fantom Chain (FTM) with the best farms in DeFi and a lottery for DRAUGR."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="twitter:image" content="https://www.draugrswap.finance/images/egg/hero.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on BSC by user count! Earn DRAUGR through yield farming or win it in the Lottery, then stake it in Nests to earn more tokens! Initial Farm Offerings (new token launch model pioneered by Draugr Swap), NFTs, and more, on a platform you can trust."
+      content="The most popular AMM on Fantom by user count! Earn DRAUGR through yield farming or win it in the Lottery, then stake it in Nests to earn more tokens! Initial Farm Offerings (new token launch model pioneered by Draugr Swap), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🥚 Draugr Swap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="Draugr Swap - A next evolution DeFi exchange on Fantom Chain (FTM)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
